--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,7 @@
 = XYZ Reader Starter Code
 
-This repository stores the starter code for the XYZ Reader project in Udacity's Android Nanodegree.
+Make Your App Material transformed the user experience of a news reading app using Material Design principles. This includes consistent and meaningful use of Material Design UI components, fonts, color, motion and surfaces.
+
+# Screenshots
+<img src="https://i.imgur.com/Re09igz.jpg" width="250">  <img src="https://i.imgur.com/SH5xewP.jpg" width="250"> 
+<img src="https://i.imgur.com/AcJ0Hvi.jpg" width="250"> 
